# naturalcc

./: .gitignore  .gitmodules  CODEOWNERS  CODE_OF_CONDUCT.md  LICENSE.txt  MANIFEST.in  OVERVIEW.md  README.md  SECURITY.md  VERSION  env_test.py  install.md  license_info.md  package-lock.json  readthedocs.yml  requirements.txt  result.json  run.py  setup.py  test.ipynb
cli/: README.md  (+1 more)
code_agent/: AGENT.md  AGENTS.md  CLAUDE.md  README.md  README.zh.md  agent_ui.py  agent_ui_assets.py  agent_ui_bindings.py  agent_web_api.py  aider_runner.py  completion_prompt_agent.py  pyproject.toml  start.sh  test_api.py  test_vulnerability_detection.py
code_agent/cli/: .gitignore  README.md  package.json  tsconfig.json
code_agent/cli/src/: cli.ts  index.ts
code_agent/cli/src/repl/: app.tsx  help.tsx  repl.tsx  utils.ts
code_agent/plugins/: __init__.py  base.py  code_completion.py  code_repair.py  code_summary.py  design_to_code.py  dispatcher.py  registry.py  vulnerability_detection.py
code_agent/rag/: cfile_parse.py  config.yaml  eval_vllm.py  evaluation.py  json2neo4j.py  node_prompt.py  preprocess.py  tokenizer.py  utils.py
code_agent/rag/c/: cfile_parse.py  completion_prompt_agent_origin.py  eval.py  eval_vllm3.py  generator.py  main.py  node_prompt.py  preprocess.py  tokenizer copy.py
code_agent/rag/java/: build_oracle_java.py  codex.md  config.yaml  eval_java_vllm.py  eval_java_vllm3.py  evaluation.py  filter_oracle_sample_java.py  generator_java.py  java_project_parser_ts.py  javafile_parse_ts.py  main_java.py  node_prompt_java_ts.py  preprocess_java_ts.py  tokenizer copy.py  tokenizer.py  utils.py
code_agent/webui/: index.html  package-lock.json  package.json  vite.config.js
code_agent/webui/src/: App.jsx  main.jsx  styles.css
(+2652 files in other folders)
